# ai_agent_ros2

./: .gitignore  README.md  setup.sh
ai_gazebo/: CMakeLists.txt  package.xml
ai_gazebo/launch/: ai_agent.launch.py  empty.launch.py  rl.launch.py
ai_gazebo/models/fcar/: model.config
ai_gazebo/worlds/: empty.world  test8.world
demo/src/travel/: action.py  agent.py  condition.py  demo.py  demo_yolo.py  image_publisher.py  keyboard_publisher.py  object_detection_publisher.py  policy.py  setup.py  state.py  text_publisher.py
demo/src/travel/launch/: empty_world.launch.py
gazebo/: CMakeLists.txt  demo_world56.world  follower.py  office5.world  package.xml
gazebo/Tcar55/: model.config  model.sdf
gazebo/models/fcar/: model.sdf
gazebo/src/travel/: demo.py  demo_yolo.py  setup.py
gazebo/worlds/: empty.world
gazebo_rl_env/: README.md  setup.py
gazebo_rl_env/gazeborlenv/: __init__.py
gazebo_rl_env/gazeborlenv/envs/: __init__.py  ai_car.py
gazebo_rl_env/gazeborlenv/utils/: ut_generic.py  ut_launch.py
gazebo_rl_env/gazeborlenv/worlds/: test8.world
scripts/: gg_demo.py  gg_demo_using_dqn.py
travel/: action.py  agent.py  demo_yolo.py  dqn_gym_example.py  neural_network_exsamples  object_detection  object_detection_publisher.py  package.xml  rlagent.py  setup.py  simple_dqn.py  spawn_agent.py  state.py
